PLATFORM-7252 | Regenerate SDK and remove unnecessary `session` endpoint
There are some unnecessary files left after merge, it should be safe to remove them. Also, as we are adding some custom endpoints we should regenerate openapi documentation. It seems like we don't need our `session` requesting endpoint which was needed before during migration process.
